fix inspector urlinput control overflow and double labels

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -105,7 +105,7 @@ body.getwid-fix-scroll-while-animation{
 	}
 }
 
-.getwid-editor-url-input .editor-url-input input {
+.getwid-editor-url-input .components-base-control__field input {
 	width: 100%;
 }
 
